mobile presentation small fix

--- a/Dev/Style/FlopYoMama.less
+++ b/Dev/Style/FlopYoMama.less
@@ -502,7 +502,6 @@ body .popover {
  
  @media only screen and (max-width: 349px) { /*special collapse*/
                 #op_range { font-size:0.6em;}
-				#op_range td { padding: 2px;}
 				#op_range td .inner_pair {
 					visibility: hidden;
 				}				
